--- a/README
+++ b/README
@@ -1,36 +1,34 @@
-<snnippet>
-  <content><![CDATA[
-# ${1:Project Name}
+# Marc Cortinas Personal Repository
 
-TODO: Write a project description
+Adding Personal Repository code and configurations
 
-## Installation
+## Getting Started
 
-TODO: Describe the installation process
+ Try to sort all this data and update this file and blog link with every commit
 
-## Usage
+## Content
 
-TODO: Write usage instructions
+* ELK personal lab
+* Docker personal lab 
+* Blog personal lab 
 
 ## Contributing
 
-1. Fork it!
-2. Create your feature branch: `git checkout -b my-new-feature`
-3. Commit your changes: `git commit -am 'Add some feature'`
-4. Push to the branch: `git push origin my-new-feature`
-5. Submit a pull request :D
+Please read [CONTRIBUTING.md](CONTRIBUTING.md) for details on our code of conduct, and the process for submitting pull requests to us.
 
-## History
+## Versioning
 
-TODO: Write history
+We use [SemVer](http://semver.org/) for versioning. For the versions available, see the [tags on this repository](https://github.com/your/project/tags). 
 
-## Credits
+## Authors
 
-TODO: Write credits
+* **Marc Cortinas Val** *
+
+See also the personal blog [Personal - Blogsite](https://marc.cortinasval.cat/blog/en/) with more deeply info
 
 ## License
 
-TODO: Write license
-]]></content>
-  <tabTrigger>readme</tabTrigger>
-</snippet>
+ Personal license instead of any kind of MIT license 
+
+## Acknowledgments
+
